# invenio-records-files

./: .editorconfig  .git-blame-ignore-revs  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.rst  RELEASE-NOTES.rst  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml  tests.yml
.tx/: config
docs/: Makefile  api.rst  conf.py  configuration.rst  index.rst  make.bat  usage.rst
examples/: app.py
invenio_records_files/: __init__.py  api.py  config.py  ext.py  links.py  models.py  receivers.py  serializer.py  utils.py  version.py  views.py
invenio_records_files/alembic/: 1ba76da94103_create_records_files_tables.py  2da9a03b0833_create_records_files_branch.py  4a5d5b4d4c2f_create_bucket_id_index.py
invenio_records_files/jsonschemas/: __init__.py
invenio_records_files/jsonschemas/records-files/: records-files-v1.0.0.json
invenio_records_files/mappings/: __init__.py
tests/: conftest.py  test_api.py  test_invenio_records_files.py  test_links.py  test_models.py  test_utils.py  test_views.py
tests/data/: __init__.py
tests/data/os-v2/: __init__.py
tests/data/os-v2/records-files/: records-files-v1.0.0.json
tests/data/records-files/: records-files-v1.0.0.json
tests/data/v6/: __init__.py
tests/data/v6/records-files/: records-files-v1.0.0.json
tests/data/v7/: __init__.py
