# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2016-2019 CERN.
# Copyright (C) 2022 Graz University of Technology.
#
# Invenio is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-records-files
version = attr: invenio_records_files.__version__
description = "Invenio modules that integrates records and files."
long_description = file: README.rst, CHANGES.rst
keywords = invenio records files
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-records-files
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
zip_safe = False
install_requires =
    invenio-base>=1.2.2
    invenio-files-rest>=1.0.5
    invenio-records>=1.0.0
    invenio-records-rest>=1.6.3

[options.extras_require]
tests =
    pytest-black>=0.3.0,<0.3.10
    invenio-indexer>=1.1.0
    invenio-search[elasticsearch6]>=1.2.0
    mock>=1.3.0
    pytest-invenio>=1.4.0
    Sphinx>=3
    invenio-db[mysql,postgresql,versioning]>=1.0.9,<2.0.0

[options.entry_points]
invenio_db.alembic =
    invenio_records_files = invenio_records_files:alembic
invenio_db.models =
    invenio_records_files = invenio_records_files.models
invenio_jsonschemas.schemas =
    records_files = invenio_records_files.jsonschemas
invenio_base.apps =
    invenio_records_files = invenio_records_files:InvenioRecordsFiles
invenio_base.api_apps =
    invenio_records_files = invenio_records_files:InvenioRecordsFiles
invenio_base.api_blueprints =
    invenio_records_files = invenio_records_files.views:create_blueprint_from_app

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_records_files --cov-report=term-missing
testpaths = tests invenio_records_files
